townify/default/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: townify-http.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-service
                port:
                  number: 8080

    - host: townify-ws.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws-service
                port:
                  number: 3008

    - host: townify-notification.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3010
